# advent_of_code_2024

./: .gitignore  CMakeLists.txt
data/: input.txt
day 1/: locations.cpp
day 2/: reactor.cpp
util/: myUtil.cpp  myUtil.h  util.cpp  util.h
